update user swagger
