# docs/swagger.json
@@ -1,4 +1,8 @@
 {
+    "schemes": [
+        "http",
+        "https"
+    ],
     "swagger": "2.0",
     "info": {
         "description": "This documentation for access Mulo Music Streaming",
@@ -10,6 +14,7 @@
         "version": "1.0"
     },
     "host": "localhost:3000",
+    "basePath": "/v1",
     "paths": {
         "/ping": {
             "get": {
@@ -106,6 +111,12 @@
                             "$ref": "#/definitions/ResponseWithData-User"
                         }
                     },
+                    "404": {
+                        "description": "User not found",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorResponse"
+                        }
+                    },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
@@ -115,6 +126,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Updates the user with the specified ID",
                 "consumes": [
                     "application/json"
@@ -172,6 +188,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Deletes the user with the specified ID",
                 "consumes": [
                     "application/json"
